Fixed alignment issue with profiles; Added react-loadable

--- a/client/src/components/SocialProfileList.css
+++ b/client/src/components/SocialProfileList.css
@@ -35,6 +35,7 @@
   transition: all 0.5s;
   transform: translateX(290px);
   will-change: transform;
+  left: 0;
   display: none;
 }
 
@@ -55,7 +56,7 @@
   box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1),
     0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s, opacity 0.1s, translate 0.2s;
-  transform-origin: 50% 0%;
+  transform-origin: 0% 0%;
   display: flex;
   justify-content: center;
   opacity: 0;
